Start of website live

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
     <main>
         <div><img src="images/nothoughts.jpg" alt="Jackie Mow Logo" /></div>
         <div>
-            <hi>Section Title</hi>
-            <p>Hello, welcome to my website.</p>
+            <hi>Education and Experience</hi>
+            <p>Experience in my life.</p>
             <a href="">Learn More</a>
         </div>
     </main>
