--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
     <main>
         <div><img src="images/nothoughts.jpg" alt="Jackie Mow Logo" /></div>
         <div>
-            <hi>Section Title</hi>
-            <p>Hello, welcome to my website.</p>
+            <hi>Contact Me</hi>
+            <p>Email me through this website.</p>
             <a href="">Learn More</a>
         </div>
     </main>
