--- a/genesee.html
+++ b/genesee.html
@@ -20,8 +20,8 @@
     <main>
         <div><img src="images/nothoughts.jpg" alt="Jackie Mow Logo" /></div>
         <div>
-            <hi>Section Title</hi>
-            <p>Hello, welcome to my website.</p>
+            <hi>Employment with Genesee</hi>
+            <p>Years 2023-2025</p>
             <a href="">Learn More</a>
         </div>
     </main>
