--- a/lapeer.html
+++ b/lapeer.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <div><img src="images/placeholderimage.jpg" alt="Jackie Mow image" /></div>
+          <div><img src="images/placeholderimage.jpg" alt="Jackie Mow image" /></div>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="lapeer.html">Lapeer</a></li>
@@ -20,8 +20,8 @@
     <main>
         <div><img src="images/nothoughts.jpg" alt="Jackie Mow Logo" /></div>
         <div>
-            <hi>Section Title</hi>
-            <p>Hello, welcome to my website.</p>
+            <hi>Emloyment with Lapeer</hi>
+            <p>Years 2019-2023</p>
             <a href="">Learn More</a>
         </div>
     </main>
