--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackie Mow Resume</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <nav>
-            <div><img src="images/placeholderimage.jpg" alt="Jackie Mow image" /></div>
-            <ul>
+        <nav class="main-menu">
+            <a href="index.html" class="site-name"><div><img src="images/placeholderimage.jpg" alt="Jackie Mow image" /></div></a>
+            <input class="menu-btn" type="checkbox" id="menu-btn"/>
+            <label class="menu-icon" for="menu-btn"><span class="navicon" aria-label="Toggle for menu"></span></label>
+            <ul class="main-nav">
                 <li><a href="about.html">About</a></li>
                 <li><a href="lapeer.html">Lapeer</a></li>
                 <li><a href="genesee.html">Genesee</a></li>
@@ -18,15 +22,17 @@
         </nav>
     </header>
     <main>
-        <div><img src="images/nothoughts.jpg" alt="Jackie Mow Logo" /></div>
-        <div>
-            <hi>Section Title</hi>
+        <div class="featured-image-container"> <img src="images/nothoughts.jpg" alt="Jackie Mow Logo" /></div>
+        <div class="featured-text-container">
+            <h1>Section Title</h1>
             <p>Hello, welcome to my website.</p>
             <a href="">Learn More</a>
         </div>
     </main>
     <footer>
+        <div class="footer-container">
         Copyright &copy; 2025 Jackie Mow
+        </div>
     </footer>
 </body>
 </html>
