--- a/about.html
+++ b/about.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div><img src="images/placeholderimage.jpg" alt="Jackie Mow image" /></div>
-            <ul>
+        <nav class="main-menu">
+            <a href="index.html" class="site-name"><div><img src="images/Asset 1.png" alt="Jackie Mow image" /></div></a>
+            <input class="menu-btn" type="checkbox" id="menu-btn"/>
+            <label class="menu-icon" for="menu-btn"><span class="navicon" aria-label="Toggle for menu"></span></label>
+            <ul class="main-nav">
                 <li><a href="about.html">About</a></li>
                 <li><a href="lapeer.html">Lapeer</a></li>
                 <li><a href="genesee.html">Genesee</a></li>
@@ -19,12 +21,12 @@
         </nav>
     </header>
     <main>
-        <div><img src="images/nothoughts.jpg" alt="Jackie Mow Logo" /></div>
         <div>
             <hi>Education and Experience</hi>
             <p>Experience in my life.</p>
             <a href="">Learn More</a>
         </div>
+        <div class="featured-image-container"> <img src="images/portrait.jpg" alt="Jackie Mow image" /></div>
     </main>
     <footer>
         Copyright &copy; 2025 Jackie Mow
