--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="main-menu">
-            <a href="index.html" class="site-name"><div><img src="images/placeholderimage.jpg" alt="Jackie Mow image" /></div></a>
+            <a href="index.html" class="site-name"><div><img src="images/Asset 1.png" alt="Jackie Mow image" /></div></a>
             <input class="menu-btn" type="checkbox" id="menu-btn"/>
             <label class="menu-icon" for="menu-btn"><span class="navicon" aria-label="Toggle for menu"></span></label>
             <ul class="main-nav">
@@ -22,12 +22,13 @@
         </nav>
     </header>
     <main>
-        <div class="featured-image-container"> <img src="images/nothoughts.jpg" alt="Jackie Mow Logo" /></div>
+        
         <div class="featured-text-container">
             <h1>Section Title</h1>
             <p>Hello, welcome to my website.</p>
             <a href="">Learn More</a>
         </div>
+        <div class="featured-image-container"> <img src="images/portrait.jpg" alt="Jackie Mow image" /></div>
     </main>
     <footer>
         <div class="footer-container">
