added main content/lighthouse

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="main-menu">
-            <a href="index.html" class="site-name"><div><img src="images/Asset 1.png" alt="Jackie Mow image" /></div></a>
+            <a href="index.html" class="site-name"><div><img src="images/Asset 1.png" alt="Jackie Mow image" class="logo"/></div></a>
             <input class="menu-btn" type="checkbox" id="menu-btn"/>
             <label class="menu-icon" for="menu-btn"><span class="navicon" aria-label="Toggle for menu"></span></label>
             <ul class="main-nav">
@@ -40,7 +40,9 @@
         </div>
     </main>
     <footer>
-        Copyright &copy; 2025 Jackie Mow
+        <div class="footer-container">
+            Copyright &copy; 2025 Jackie Mow
+            </div>
     </footer>
 </body>
 </html>
