--- a/about.html
+++ b/about.html
@@ -35,9 +35,11 @@
                 </p>
             <a href="">Learn More</a>
         </div>
+        <div class="sidebar">
         <div class="featured-image-container"> <img src="images/portrait.jpg" alt="Jackie Mow image" class="portrait"/></div>
         <div class="featured-text-container"> <p>Jackie Mow, author of this study.</p></div>
     <!--merging with ptoto, need to find a way to drop it into its own section -->
+</div>
     </main>
     <footer>
         <div class="footer-container">
