--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         <a href="">Learn More</a>
     </div>
     <!--how to get below again-->
+    <div class="sidebar">
         <div class="featured-image-container"> <img src="images/portrait.jpg" alt="Jackie Mow image" class="portrait"/></div>
         <div class="featured-text-container"> <p>Jackie Mow, author of this study.</p></div>
     <!--merging with phtot, need to find a way to drop it into its own section and move it over to the left-->
+</div>
     </main>
     <footer>
         <div class="footer-container">
