--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,12 @@
         </nav>
     </header>
     <main>
-        <div>
-            <hi>Contact Me</hi>
+        <div class="featured-text-container-contact">
+
+            <h1 class="h1">Contact Me</h1>
+
             <p>Email me with any questions or feedback this study has raised.</p>
-        </div>
+        
         <form action="https://formspree.io/f/mjkypgae" method="post">
             <label for="name">Name</label>
             <input id="name" type="text" name="name" class="form-input">
@@ -37,6 +39,7 @@
 
             <input type="submit" value="Send">
             </form>
+            </div>
     </main>
     <footer>
         <div class="footer-container">
